<resources>
    <string name="app_name">papr-w8</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_password">Enter password</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_email">Enter email</string>
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
<<<<<<< HEAD
    <string name="status">status</string>
    <string name="scan_to_borrow">Scan to Borrow</string>
    <string name="isbn">isbn</string>
    <string name="author">author</string>
    <string name="title">title</string>
    <string name="Description">description</string>
    <string name="DescriptionText">Description</string>
    <string name="TitleText">Title</string>
    <string name="AuthorText">Author</string>
    <string name="ISBNText">ISBN:</string>
    <string name="StatusText">Status:</string>
=======
>>>>>>> ec57b5130a528a440782c03a1580c3e4eb21524a

    <string-array name="search_options">
        <item>Ava. Books</item>
        <item>Users</item>
        <item>All Books</item>
    </string-array>
</resources>