<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/book_checkedout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".BookView.BookCheckoutView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="5dp">


            <ImageView
                android:id="@+id/frontImageView"
                android:layout_width="125dp"
                android:layout_height="175dp"
                android:layout_marginLeft="115dp"
                android:layout_marginTop="15dp"
                tools:src="@tools:sample/avatars"
                android:layout_marginStart="115dp"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="170dp"
            android:layout_height="43dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/DescriptionText"
            android:textStyle="bold"
            android:textSize="26sp"
            android:layout_marginStart="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/TitleText"
                android:layout_marginStart="20dp" />

            <TextView
                android:id="@+id/titleEditText"
                android:layout_width="270dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                android:text="@string/title"
                android:layout_marginStart="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp">

            <TextView
                android:id="@+id/authorText"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/AuthorText"
                android:layout_marginStart="20dp" />

            <TextView
                android:id="@+id/authorEditText"
                android:layout_width="270dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                android:text="@string/author"
                android:layout_marginStart="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp">

            <TextView
                android:id="@+id/isbnText"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/ISBNText"
                android:layout_marginStart="20dp" />

            <TextView
                android:id="@+id/isbnEditText"
                android:layout_width="270dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                android:text="@string/isbn"
                android:layout_marginStart="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp">

            <TextView
                android:id="@+id/statusText"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/StatusText"
                android:layout_marginStart="20dp" />

            <TextView
                android:id="@+id/statusEditText"
                android:layout_width="270dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                android:text="@string/status"
                android:layout_marginStart="10dp" />
        </LinearLayout>

        <fragment
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="10dp"
            android:id="@+id/map" />

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="90dp"
            android:textColor="@android:color/white"
            android:background="@drawable/button_rounded_deep_purple"
            android:text="Scan to Borrow" />

    </LinearLayout>

</ScrollView>
